technologies/rsyslog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsyslog-deployment
  namespace: rsyslog
  labels:
    app: rsyslog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsyslog
  template:
    metadata:
      labels:
        app: rsyslog
    spec:
      containers:
      - name: rsyslog
        image: opeomotayo/rsyslog:latest
        ports:
        - containerPort: 514
        resources:
          requests:
            cpu: 250m
            memory: 524Mi
        volumeMounts:
          - name: local-vol
            mountPath: "/var/log"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: local-vol
          persistentVolumeClaim:
            claimName: rsyslog-pv
