technologies/rsyslog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "rsyslog-service"
  namespace: "rsyslog"
spec:
  ports:
    - port: 514
      targetPort: 514
      protocol: TCP
  type: ClusterIP
  selector:
    app: "rsyslog"
