technologies/rsyslog/ingress.yaml
#managed by opeomotayo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsyslog-ingress
  namespace: rsyslog
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
  - hosts:
      - rsyslog.opeomotayo.net
    secretName: rsyslog-production-certificate
  rules:
  - host: rsyslog.opeomotayo.net
    http:
      paths:
      - backend:
          service:
            name: rsyslog-service
            port:
              number: 514
        path: /
        pathType: Prefix
